assets/src/admin.scss
.sgsb-header {
    height: 100px;
    display: inline-flex;
    align-items: center;

    .sgsb-logo {
        background: url('../images/logo.svg');
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center;
        width: 212px;
        height: 56px;
    }
}

.sgsb-heading[class] {
    font-weight: 600;
    font-size: 40px;
    line-height: 48px;
    padding: 20px 0;

}

.site-card-wrapper {
    .sgsb-module-card {
        border-radius: 8px;
        border: 1px solid #ECEDF0;

        .ant-card-body {
            padding: 0;

            .ant-divider {
                margin-bottom: 16px;

            }

            .ant-btn[class] {
                border-radius: 8px;
                height: auto;
                line-height: inherit;
                padding: 15px 18px 11px 15px;
                padding-top: 11px !important;
                border: 1px solid #ECEDF0;
                position: relative;

                .anticon {
                    svg {
                        font-size: 16px;
                        color: #989FAB;
                        position: relative;
                        top: 1px;
                    }

                }

                &:hover {
                    border: 1px solid #008DFF;

                    .anticon {
                        svg {
                            color: #008DFF;

                        }
    
                    }

                }

            }

        }
        
        .ant-switch {
            background: #D7DBDF;
            width: 54px;
            height: 29px;
            margin-left: -10px;

            .ant-switch-handle {
                top: 5px;
                left: 5px;
                
            }

            &.ant-switch-checked {
                background: #02AC6E;

                .ant-switch-handle {
                    left: calc(100% - 18px - 5px);

                }
    
            }
        }

        
        .module-thumb {
            background: #F9FAFC;
            border-radius: 8px;
            padding: 14px;
            margin-right: 7px;
        }
        .module-name {
            font-weight: 500;
            font-size: 24px;
            line-height: 29px;

        }
        .module-desc {
            color: #66656D;
            font-weight: 400;
            font-size: 16px;
            line-height: 28px;
            padding: 0 23px 7px;

        }
    }
}

.sgsb__module-pagination {
    li {
        min-width: 47px;
        height: 47px;
        line-height: 45px;
        border-radius: 4px;

    }

    .ant-pagination-item {
        a {
            &:hover {
                color: #fff;
                background: #008DFF;

            }
        }

        &.ant-pagination-item-active {
            a {
                color: #fff;
                background: #008DFF;

            }
        }
    }
    
}

